--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,14 @@
 
 		<section>
 			<article>
-				
+				<h1 class="para-title">Resume</h1>
+				<p class="para">I recently graduated from a Web Development course at General Assembly where I increased my typing speed from 10 words per minute on my type writer to 100 words per minute on my new MacBook Pro. They also taught me how to be an awesome Web Developer. During my spare time, I enjoy senior water aerobics, pickling, and spending time with my great grand children.
+				</p>
+			</article>
+			<br>
+			<br>
+			<article>
+				<h2 class="sub-heading-title">RELEVANT EXPERIENCE</h2>
 			</article>
 		</section>
 
