relevant exp completed

--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,39 @@
 			<br>
 			<article>
 				<h2 class="sub-heading-title">RELEVANT EXPERIENCE</h2>
+				<ul>
+				<li><a class="role">Web Developer,</a>
+				<a class="company">Github</a>
+				<a class="year">2013 - present</a>
+				<p class="bullet-para">Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p>
+				<br>
+				<br>
+				<li><a class="role">Copy Editor,</a>
+				<a class="company">Complaint.ly</a>
+				<a class="year">2012 - 2013</a>
+				<p class="bullet-para">Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed).</p>
+				<br>
+				<br>
+				<li><a class="role">Master Knitter,</a>
+				<a class="company">Christmas Sweater Org</a>
+				<a class="year">1992 – 2011</a>
+				<p class="bullet-para">Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p>
+				<br>
+				<br>
+				<li><a class="role">Senior Vice President,</a>
+				<a class="company">The Golden Girls Appreciation Society</a>
+				<a class="year">1985 - 1992</a>
+				<p class="bullet-para">Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.</p>
+				<br>
+				<br>
+				<li><a class="company">Certified Mint Candy and Freshly Baked Cookies Distributor.</a>
+				<a class="year">1960</a>
+				<p class="bullet-para">Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p>
+
+
+
+
+
 			</article>
 		</section>
 
