--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
-<doctype html>
+<!doctype html>
 <html>
 	<head>
-		<!-- Hello, this is a comment -->
 		<title>Wendy Bite</title>
+		<meta charset="utf8">
+		<link rel="stylesheet" href="styles/main.css">
 	</head>
+	<body>
 
-<header>
-	<h1><i>Wendy Bite</i></h1>
-		<nav><h2>About Me Resume</h2></nav>
-</header>
-<hr>
-<section>
-	<article>
-		<h1>About me</h1>
-		<p><h2>
-			The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
-		</h2></p>
-		<br>
-		<p><h2>
-			Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!
-		</h2></p>
-		<img src="file:///Users/Elizabethnair/Desktop/FEWD/WendyBite_BEM-master/assignmentMaterials/Betty-White.jpg">
-	</article>
-</section>
-<hr>
-<footer>
-	<nav>
-		<h1>Facebook Twitter Instagram Linkedin</h1>
-	</nav>
-</footer>
+		<header>
+			<h1 class="main-title">Wendy G. Bite</h1>
+			<nav class="nav">
+				<a href="#" class="menu-link menu-active">About Me</a>
+				<!-- <span class="menu-seperator-character">|</span> -->
+				<a href="#" class="menu-link">Résumé</a>
+
+			</nav>
+		</header>
+
+		<section>
+			<article>
+				<h1 class="para-title">About Me</h1>
+
+				<img class="img" src="assets/Betty-White.jpg">
+
+				<p class="para">
+					The series revolves around four older, single women (three widows and one divorcée) sharing a house in Miami, Florida. The owner of the house is a widow named Blanche Devereaux (Rue McClanahan), who was joined by fellow widow Rose Nylund (Betty White) and divorcée Dorothy Zbornak (Bea Arthur). They both responded to a room-for-rent ad on the bulletin board of a local grocery store. In the pilot episode, the women had a gay cook named Coco (Charles Levin), who was subsequently removed.[5] The three were soon joined by Dorothy's mother, Sophia Petrillo (Estelle Getty), after the retirement home where she lived, Shady Pines, burned down.
+				</p>
+
+				<p class="para">
+					Thank You for being a friend. Travel down a road and back again. Your heart is true, you're a pal and a confidante.And if you threw a party, invited everyone you knew, you would see the biggest gift would be from me and the card attached would say, Thank You For Being a Friend!
+				</p>
+			</article>
+		</section>
+
+		<footer>
+			<nav class="nav bottom-nav">
+				<a href="#" class="menu-link">Facebook</a>
+				<a href="#" class="menu-link">Twitter</a>
+				<a href="#" class="menu-link">Instagram</a>
+				<a href="#" class="menu-link">Linkedin</a>		
+			</nav>
+		</footer>
+
+	</body>
+</html>
+
+
+
+
+
+
