--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="main-title">Wendy G. Bite</h1>
 			<nav class="nav">
-				<a href="#" class="menu-link menu-active">About Me</a>
+				<a href="https://elizabethnair.github.io/wendybite/resume.html" class="menu-link menu-active">About Me</a>
 				<!-- <span class="menu-seperator-character">|</span> -->
 				<a href="#" class="menu-link">Résumé</a>
 
@@ -35,10 +35,10 @@
 
 		<footer>
 			<nav class="nav bottom-nav">
-				<a href="#" class="menu-link">Facebook</a>
-				<a href="#" class="menu-link">Twitter</a>
-				<a href="#" class="menu-link">Instagram</a>
-				<a href="#" class="menu-link">Linkedin</a>		
+				<a href="https://www.facebook.com/" class="menu-link">Facebook</a>
+				<a href="https://www.twitter.com/" class="menu-link">Twitter</a>
+				<a href="https://www.instagram.com/" class="menu-link">Instagram</a>
+				<a href="https://www.linkedin.com/" class="menu-link">Linkedin</a>		
 			</nav>
 		</footer>
 
