education and links added

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="main-title">Wendy G. Bite</h1>
 			<nav class="nav">
-				<a href="#" class="menu-link">About Me</a>
+				<a href="https://elizabethnair.github.io/wendybite/index.html" class="menu-link">About Me</a>
 				<!-- <span class="menu-seperator-character">|</span> -->
 				<a href="#" class="menu-link menu-active">Résumé</a>
 
@@ -27,57 +27,59 @@
 			<br>
 			<article>
 				<h2 class="sub-heading-title">RELEVANT EXPERIENCE</h2>
+				<br>
+				<br>
 				<ul>
-				<li><a class="role">Web Developer,</a>
-				<a class="company">Github</a>
-				<a class="year">2013 - present</a>
-				<p class="bullet-para">Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p>
+					<li><a class="role">Web Developer,</a>
+					<a class="company">Github</a>
+					<a class="year">2013 - present</a>
+					<p class="bullet-para">Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p></li>
+					<br>
+					<br>
+					<li><a class="role">Copy Editor,</a>
+					<a class="company">Complaint.ly</a>
+					<a class="year">2012 - 2013</a>
+					<p class="bullet-para">Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed).</p></li>
+					<br>
+					<br>
+					<li><a class="role">Master Knitter,</a>
+					<a class="company">Christmas Sweater Org</a>
+					<a class="year">1992 – 2011</a>
+					<p class="bullet-para">Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p></li>
+					<br>
+					<br>
+					<li><a class="role">Senior Vice President,</a>
+					<a class="company">The Golden Girls Appreciation Society</a>
+					<a class="year">1985 - 1992</a>
+					<p class="bullet-para">Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.</p></li>
+					<br>
+					<br>
+					<li><a class="company">Certified Mint Candy and Freshly Baked Cookies Distributor.</a>
+					<a class="year">1960</a>
+					<p class="bullet-para">Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p></li>
+				</ul>
+			</article>
+			<br>
+			<br>
+			<article>
+				<h2 class="sub-heading-title">EDUCATION</h2>
+				<ul>
+					<li><a class="role">General Assembly</a>
+					<a class="company">WDI - 2013</a></li>
+					<li><a class="role">Queens College</a>
+					<a class="company">- B.A. 1923</a></li>
+					<li><a class="role">Brooklyn Etiquette School For Girls</a>
+					<a class="company">- 1920(Honors)</a></li>
+				</ul>
 				<br>
-				<br>
-				<li><a class="role">Copy Editor,</a>
-				<a class="company">Complaint.ly</a>
-				<a class="year">2012 - 2013</a>
-				<p class="bullet-para">Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed).</p>
-				<br>
-				<br>
-				<li><a class="role">Master Knitter,</a>
-				<a class="company">Christmas Sweater Org</a>
-				<a class="year">1992 – 2011</a>
-				<p class="bullet-para">Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p>
-				<br>
-				<br>
-				<li><a class="role">Senior Vice President,</a>
-				<a class="company">The Golden Girls Appreciation Society</a>
-				<a class="year">1985 - 1992</a>
-				<p class="bullet-para">Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.</p>
-				<br>
-				<br>
-				<li><a class="company">Certified Mint Candy and Freshly Baked Cookies Distributor.</a>
-				<a class="year">1960</a>
-				<p class="bullet-para">Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p>
-
-
-
-
-
 			</article>
 		</section>
-
-
-
-
-
-
-
-
-
-
 		<footer>
 			<nav class="nav bottom-nav">
-				<a href="#" class="menu-link">Facebook</a>
-				<a href="#" class="menu-link">Twitter</a>
-				<a href="#" class="menu-link">Instagram</a>
-				<a href="#" class="menu-link">Linkedin</a>		
+				<a href="https://www.facebook.com/" class="menu-link">Facebook</a>
+				<a href="https://www.twitter.com/" class="menu-link">Twitter</a>
+				<a href="https://www.instagram.com/" class="menu-link">Instagram</a>
+				<a href="https://www.linkedin.com/" class="menu-link">Linkedin</a>		
 			</nav>
 		</footer>
 
