--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="main-title">Wendy G. Bite</h1>
 			<nav class="nav">
-				<a href="https://elizabethnair.github.io/wendybite/index.html" class="menu-link">About Me</a>
+				<a href="https://elizabethnair.github.io/wendybite/index.html#" class="menu-link">About Me</a>
 				<!-- <span class="menu-seperator-character">|</span> -->
 				<a href="#" class="menu-link menu-active">Résumé</a>
 
