Updated style names

--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 				<h2 class="sub-heading-title">RELEVANT EXPERIENCE</h2>
 				<br>
 				<br>
-				<ul>
+				<ul class="bullet-style">
 					<li><a class="role">Web Developer,</a>
 					<a class="company">Github</a>
 					<a class="year">2013 - present</a>
@@ -63,7 +63,7 @@
 			<br>
 			<article>
 				<h2 class="sub-heading-title">EDUCATION</h2>
-				<ul>
+				<ul class="bullet-style">
 					<li><a class="role">General Assembly</a>
 					<a class="company">WDI - 2013</a></li>
 					<li><a class="role">Queens College</a>
