--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<header>
 			<h1 class="main-title">Wendy G. Bite</h1>
 			<nav class="nav">
-				<a href="https://elizabethnair.github.io/wendybite/resume.html#" class="menu-link menu-active">About Me</a>
+				<a class="menu-link menu-active">About Me</a>
 				<!-- <span class="menu-seperator-character">|</span> -->
-				<a href="#" class="menu-link">Résumé</a>
+				<a href="#" href="https://elizabethnair.github.io/wendybite/resume.html#" class="menu-link">Résumé</a>
 
 			</nav>
 		</header>
