--- a/resume.html
+++ b/resume.html
@@ -30,32 +30,33 @@
 				<br>
 				<br>
 				<ul class="bullet-style">
-					<li><a class="role">Web Developer,</a>
-					<a class="company">Github</a>
-					<a class="year">2013 - present</a>
+					<li><h3 class="list-head">Web Developer,</h3>
+					<h4 class="list-sub">Github</h4>
+					<h5 class="list-small">2013 - present</h5>
 					<p class="bullet-para">Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p></li>
 					<br>
 					<br>
-					<li><a class="role">Copy Editor,</a>
-					<a class="company">Complaint.ly</a>
-					<a class="year">2012 - 2013</a>
-					<p class="bullet-para">Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed).</p></li>
+					<li><h3 class="list-head">Copy Editor,</h3>
+					<h4 class="list-sub">Complaint.ly</h4>
+					<h5 class="list-small">2012 - 2013</h5>
+					<p class="bullet-para">Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)</p></li>
+					<br>
+					<br>					
+					<li><h3 class="list-head">Master Knitter,</h3>
+					<h4 class="list-sub">Christmas Sweater Org</h4>
+					<h5 class="list-small">1992 – 2011</h5>
+					<p class="bullet-para">Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.
+					</p></li>
 					<br>
 					<br>
-					<li><a class="role">Master Knitter,</a>
-					<a class="company">Christmas Sweater Org</a>
-					<a class="year">1992 – 2011</a>
-					<p class="bullet-para">Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p></li>
-					<br>
-					<br>
-					<li><a class="role">Senior Vice President,</a>
-					<a class="company">The Golden Girls Appreciation Society</a>
-					<a class="year">1985 - 1992</a>
+					<li><h3 class="list-head">Senior Vice President,</h3>
+					<h4 class="list-sub">The Golden Girls Appreciation Society</h4>
+					<h5 class="list-small">1985 - 1992</h5>
 					<p class="bullet-para">Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.</p></li>
 					<br>
 					<br>
-					<li><a class="company">Certified Mint Candy and Freshly Baked Cookies Distributor.</a>
-					<a class="year">1960</a>
+					<li><h4 class="list-sub">Certified Mint Candy and Freshly Baked Cookies Distributor</h4>
+					<h5 class="list-small">1960</h5>
 					<p class="bullet-para">Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p></li>
 				</ul>
 			</article>
@@ -63,13 +64,14 @@
 			<br>
 			<article>
 				<h2 class="sub-heading-title">EDUCATION</h2>
+				<br>
 				<ul class="bullet-style">
-					<li><a class="role">General Assembly</a>
-					<a class="company">WDI - 2013</a></li>
-					<li><a class="role">Queens College</a>
-					<a class="company">- B.A. 1923</a></li>
-					<li><a class="role">Brooklyn Etiquette School For Girls</a>
-					<a class="company">- 1920(Honors)</a></li>
+					<li><h3 class="list-head">General Assembly</h3>
+					<h3 class="list-sub">WDI - 2013</h3></li>
+					<li><h3 class="list-head">Queens College</h3>
+					<h3 class="list-sub">- B.A. 1923</h3></li>
+					<li><h3 class="list-head">Brooklyn Etiquette School For Girls</h3>
+					<h3 class="list-sub">- 1920(Honors)</h3></li>
 				</ul>
 				<br>
 			</article>
